<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/modal_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@android:color/transparent">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose An Option"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background_grey"
                    android:drawableLeft="@drawable/ic_task"
                    android:drawableTint="@color/carnation"
                    android:text="@string/create_task"
                    android:textAlignment="viewStart"
                    card_view:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background_grey"
                    android:drawableLeft="@drawable/ic_baseline_note_add_24"
                    android:drawableTint="@color/carnation"
                    android:text="@string/create_note"
                    android:textAlignment="viewStart"
                    card_view:cornerRadius="5dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_checklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background_grey"
                    android:drawableLeft="@drawable/ic_baseline_format_list_bulleted_24"
                    android:drawableTint="@color/carnation"
                    android:text="@string/create_check_list"
                    android:textAlignment="viewStart"
                    card_view:cornerRadius="5dp"
                    card_view:elevation="10dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modal_cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/background_grey"
            android:elevation="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            app:cornerRadius="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>